# ExoArmur-Core

./: .gitignore  .gitleaks.toml  ARCHITECTURE.md  BOUNDARY_MODEL.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FAILING_SET_NOW.txt  FAILING_SET_START.txt  HEALTH_REPORT.md  Makefile  OPEN_CORE_BOUNDARIES.md  OPEN_CORE_RELEASE_FINAL_CHECKLIST.md  PHASE2A_IMPLEMENTATION_SUMMARY.md  PHASE5_STEP4_COMPLETION_SUMMARY.md  PHASE5_STEP4_V2_ASYNC_IMPLEMENTATION.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  README_MINIMAL.md  README_v0.3.0.md  RELEASE_NOTES_RC1.md  RELEASE_NOTES_v0.2.0.md  RELEASE_REPRODUCIBILITY.md  ROADMAP.md  SECURITY.md  VALIDATE.md  api_models.py  approval.py  conftest.py  constraints.txt  docker-compose.yml  main.py  models_v1.py  pyproject.toml  requirements-build.txt  requirements-quickstart.txt  requirements-test.txt  requirements.txt  test-results.xml
.github/codeql/: codeql-config.yml
.github/workflows/: codeql-analysis.yml  core-invariant-gates.yml  deploy.yml  documentation.yml  module-boundary-enforcement.yml  multi-platform-tests.yml  observability.yml  phase-0d-boundary-enforcement.yml  publish-pypi.yml  security-scan.yml  v2-demo-smoke.yml
artifacts/: openapi_v1.json
demo/: README.md
demos/: canonical_proof_bundle.json  canonical_truth_reconstruction_demo.py
docs/: ARBITRATION.md  ARCHITECTURE.md  ARCHITECTURE_SIMPLE.md  AUDIT_EVENT_CATALOG.md  BUILD_AND_TEST.md  CAPABILITY_BOUNDARY.md  CONSTITUTION.md  CONTRACTS.md  COORDINATION_VISIBILITY.md  COUNTERFACTUAL_POSITION_PAPER.md  DESIGN_PRINCIPLES.md  DEVELOPMENT_SETUP.md  DIRECTORY_STRUCTURE.md  EXECUTION_GOVERNANCE_ARCHITECTURE.md  EXOARMUR_SYSTEMS_PAPER.md  EXPANSION_GOVERNANCE.md  FEATURE_FLAGS.md  GOLDEN_DEMO_INTEGRITY.md  GOVERNANCE.md  HN_SHOW_POST_v0.2.0.md  IDENTITY_CONTAINMENT.md  INSTALLATION.md  LAUNCH_COPY.md  MODULE_SEPARATION.md  Makefile  ORGANISM_PRINCIPLES.md  PHASE_0C_STATE_SURFACES.md  PHASE_2B_EXIT_CHECKLIST.md  PHASE_2B_FUTURE_CONTRIBUTOR_WARNING.md  PHASE_2B_GOVERNANCE_ASSERTIONS.md  PHASE_2B_PLAN.md  PHASE_2B_POD_INTEGRATION_RECEIPT.md  PHASE_2B_PROTOCOL_LAW.md  PHASE_2B_TEST_ENFORCEMENT_MANIFEST.md  PHASE_GATE_IMPLEMENTATION.md  PHASE_GATE_MATRIX.md  PHASE_MINUS_0_5_FAILING_TESTS.md  PHASE_MINUS_0_5_IDENTITY_AUDIT_REMAINING.md  PHASE_STATUS.md  POSITIONING.md  (+23 more)
examples/: ai_agent_verification_ui.html  demo_standalone.py  demo_standalone_proof_bundle.json  demo_ui.html  external_validation_ui.html  integrity_verification_ui.html  langchain_integration.py  model_wrapped_demo.py  model_wrapped_demo_proof_bundle.json  quickstart_counterfactual.py  quickstart_replay.py
feature_flags/: __init__.py
modules/EXAMPLE_MODULE_TEMPLATE/: LICENSE  README.md  export_manifest.json  pyproject.toml
modules/EXAMPLE_MODULE_TEMPLATE/docs/: README.md
modules/EXAMPLE_MODULE_TEMPLATE/tools/: README.md
modules/exoarmur_control_plane/: LICENSE  PROVENANCE.json  README.md  export_manifest.json  pyproject.toml
modules/exoarmur_control_plane/contracts/: arbitration_v1.md  kill_authority_v1.md  soi_v1.md
modules/exoarmur_control_plane/docs/: SOI_OVERVIEW.md
modules/exoarmur_control_plane/tools/: README.md
modules/exoarmur_exolock/: PROVENANCE.json  README.md  export_manifest.json  pyproject.toml
modules/exoarmur_exolock/contracts/: tae_v1.md
modules/exoarmur_exolock/docs/: TAE_OVERVIEW.md
modules/exoarmur_exolock/tools/: README.md
scripts/: ai_agent_positioning_validation.py  ai_agent_verification_server.py  audit_record.json  boundary_gate.py  boundary_guard.py  check_core_determinism.py  demo_handshake.py  demo_identity_containment.py  demo_scenario.py  demo_steps.sh  demo_v2_restrained_autonomy.py  demo_visibility_arbitration.py  demo_web_server.py  demonstrate_violation_detection.py  deploy_demo.py  exoarmur_production_drift_demo.py  export_openapi_and_schemas.py  export_schemas.py  external_user_simulation.py  external_validation.py  external_validation_server.py  failure_visibility_validation.py  generate_golden_artifacts.py  integrity_verification_server.py  narrative_clarity_validation.py  output_consistency_check.py  phase5_final.py  phase5_reality_run.py  phase5_reality_run_fixed.py  phase6_chaos_test.py  phase6_final_reality_run.py  phase6_load_test.py  protocol_enforcer_boundary.py  prove_clean_install.sh  quick_start.py  quickstart.sh  reality.sh  reality_batch.sh  reality_export.py  reality_export_simple.py  (+22 more)
src/: __init__.py  api_models.py  cli.py  clock.py  main.py  main_export.py  nats_client.py
src/exoarmur/: cli.py  (+8 more)
tests/: conftest.py  determinism_baseline.json  factories.py  federation_fixtures.py  test_api_models.py  test_approval_wiring.py  test_arbitration.py  test_audit_normalizer_integration.py  test_belief_aggregation.py  test_boundary_contract_enforcement.py  test_boundary_enforcement.py  test_byzantine_fault_injection.py  test_byzantine_fault_injection_tier0_hardening.py  test_canonical_utils_tier0_hardening.py  test_capability_boundary.py  test_causal_context_logger.py  test_cli_env.py  test_constitutional_invariants.py  test_coordination_models_v2.py  test_coordination_state_machine.py  test_demo_standalone.py  test_env_parity.py  test_environment_monitor_integration.py  test_event_envelope_tier0_hardening.py  test_event_loop_policy.py  test_execution_boundary_v2_approvals.py  test_execution_boundary_v2_execution_trace.py  test_execution_boundary_v2_filesystem_executor_integration.py  test_execution_boundary_v2_http_executor_integration.py  test_execution_boundary_v2_policy_engine.py  test_execution_boundary_v2_policy_pipeline_integration.py  test_execution_boundary_v2_proxy_pipeline.py  test_execution_boundary_v2_scaffolding.py  test_execution_proof_bundle.py  test_facts_derivation.py  test_federate_identity_store.py  test_federate_identity_store_old.py  test_federation_crypto.py  test_federation_crypto_tightened.py  test_federation_identity_integration.py  (+69 more)
tmp/: env-parity-audit.json  full-pytest.xml
tools/: boundary_check.py  boundary_manifest.json  export_core.sh  export_manifest_core.json  export_module.sh
venv_quickstart/: pyvenv.cfg
(+420 files in other folders)
