[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exoarmur-core"
version = "0.3.0"
description = "ExoArmur Core – production-ready deterministic governance runtime for autonomous and AI-driven systems"
authors = [
    {name = "ExoArmur Team", email = "team@exoarmur.dev"}
]
maintainers = [
    {name = "ExoArmur Team", email = "team@exoarmur.dev"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Systems Administration",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = [
    "governance",
    "deterministic",
    "autonomous",
    "ai",
    "audit",
    "replay",
    "security",
    "policy",
    "enforcement",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-ulid>=1.0.0",
    "click>=8.1.0",
    "httpx>=0.25.0",
    "nats-py>=2.7.0",
    "python-json-logger>=2.0.0",
    "cryptography>=46.0.4",
    "psutil>=5.9.0",
]

[project.urls]
Homepage = "https://github.com/slucerodev/ExoArmur-Core"
Documentation = "https://slucerodev.github.io/ExoArmur-Core/"
Repository = "https://github.com/slucerodev/ExoArmur-Core.git"
"Bug Tracker" = "https://github.com/slucerodev/ExoArmur-Core/issues"
Changelog = "https://github.com/slucerodev/ExoArmur-Core/blob/main/CHANGELOG.md"
"Source Code" = "https://github.com/slucerodev/ExoArmur-Core"
Discussions = "https://github.com/slucerodev/ExoArmur-Core/discussions"

[project.scripts]
exoarmur = "exoarmur.cli:main"

[project.entry-points.pytest11]
exoarmur-stability = "exoarmur.stability.classifier"

[project.optional-dependencies]
v2 = []
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.0.0",
  "black>=23.0.0",
  "isort>=5.12.0",
  "mypy>=1.0.0",
  "bandit>=1.7.0",
  "pip-audit>=2.5.0",
]
docs = [
  "sphinx>=6.0.0",
  "sphinx-rtd-theme>=1.2.0",
  "sphinx-autodoc-typehints>=1.22.0",
  "myst-parser>=1.0.0",
]
monitoring = [
  "prometheus-client>=0.16.0",
  "structlog>=23.0.0",
]
test = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.0.0",
  "httpx>=0.25.0",
  "factory-boy>=3.2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["exoarmur*", "spec*" ]

[tool.setuptools.package-data]
"*" = ["*.py", "*.yaml", "*.json", "*.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "asyncio: marks tests as async",
    "v2_acceptance: Tests for V2 Phase 2 acceptance gates",
    "golden_demo: Golden Demo live jetstream acceptance tests",
    "live: External/opt-in live tests; not run by default; intentionally skipped unless explicitly enabled"
]

[tool.pytest_asyncio]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
