[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exoarmur-core"
version = "2.0.0"
description = "ExoArmur Core – deterministic governance and replayable audit layer for execution"
authors = [
    {name = "ExoArmur Team", email = "team@exoarmur.dev"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-ulid>=2.0.0",
    "click>=8.1.0",
    "httpx>=0.25.0",
    "nats-py>=2.7.0",
    "python-json-logger>=2.0.0",
    "cryptography>=46.0.4",
]

[project.scripts]
exoarmur = "exoarmur.cli:main"
v2-demo = "exoarmur.v2_restrained_autonomy:demo"

[project.optional-dependencies]
v2 = []
dev = [
  "pytest",
  "pytest-asyncio",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["exoarmur*", "spec*" ]

[tool.setuptools.package-data]
"*" = ["*.py", "*.yaml", "*.json", "*.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "asyncio: marks tests as async",
    "v2_acceptance: Tests for V2 Phase 2 acceptance gates",
    "golden_demo: Golden Demo live jetstream acceptance tests",
    "live: External/opt-in live tests; not run by default; intentionally skipped unless explicitly enabled"
]

[tool.pytest_asyncio]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
