[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exoarmur-core"
version = "2.1.0"
description = "ExoArmur Core – deterministic governance and replayable audit layer for execution"
authors = [
    {name = "ExoArmur Team", email = "team@exoarmur.dev"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # fastapi + pydantic are OpenAPI-snapshot-sensitive: their schema
    # generators change between minor versions (e.g. ValidationError.ctx/input
    # fields emitted on >=0.128 / >=2.13). The committed artifacts/openapi_v1.json
    # snapshot is regenerated and verified against the versions below, which
    # exactly match requirements.lock. Loosening these bounds will break
    # tests/test_schema_snapshots.py::test_openapi_snapshot_unchanged for any
    # consumer. Bump requires a coordinated snapshot regeneration — see
    # scripts/export_openapi_and_schemas.py.
    "fastapi>=0.127,<0.128",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.12,<2.13",
    "python-ulid>=2.0.0",
    "click>=8.1.0",
    "httpx>=0.25.0",
    "nats-py>=2.7.0",
    "python-json-logger>=2.0.0",
    "cryptography>=46.0.7",
]

[project.scripts]
exoarmur = "exoarmur.cli:main"

[project.entry-points."pytest11"]
exoarmur-stability = "exoarmur.stability.classifier"

[project.optional-dependencies]
v2 = []
dev = [
  # Test runner + async
  "pytest>=7.4,<10",
  "pytest-asyncio>=0.21",
  "pytest-cov>=4.0",
  "pytest-timeout>=2.0",
  "pytest-randomly>=3.15",
  "pytest-json-report>=1.5",
  "pytest-metadata>=3.0",
  # HTTP client for FastAPI test client
  "httpx>=0.25",
  # Linting / typing / formatting
  "black>=24.0",
  "isort>=5.0",
  "mypy>=1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["exoarmur*", "spec*" ]

[tool.setuptools.package-data]
"*" = ["*.py", "*.yaml", "*.json", "*.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "asyncio: marks tests as async",
    "v2_acceptance: Tests for V2 Phase 2 acceptance gates",
    "golden_demo: Golden Demo live jetstream acceptance tests",
    "live: External/opt-in live tests; not run by default; intentionally skipped unless explicitly enabled"
]

[tool.pytest_asyncio]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
